Fixed .faux--input__checkbox vertical-align

--- a/app/assets/stylesheets/core/core_components/_faux_inputs.sass
+++ b/app/assets/stylesheets/core/core_components/_faux_inputs.sass
@@ -54,6 +54,7 @@
 
 .faux--input__checkbox--hide-text
   display: inline-block
+  vertical-align: middle
   width: 17px
   height: 17px
   padding-left: 0
